# lifedb

./: .bumpversion.cfg  .example_env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
lifedb/: __init__.py  __main__.py  exceptions.py  run.py  schemas.yml
lifedb/app/: __init__.py  run.py  sample_app.py
lifedb/core/: __init__.py  api.py  db.py  transform.py
lifedb/dagster/: __init__.py  assets.py  definitions.py
lifedb/db/: __init__.py  run.py  schemas.yml
lifedb/db/sql/: create_sample_tables.sql  load_sample_data.sql
lifedb/sql/: __init__.py
scripts/: spinup_db.py
tests/: __init__.py  test_lifedb.py
